fix: remove height value from recommended section at medium screen level to remove vertical gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,8 +408,12 @@ footer i {
 
     #recommended {
         width: 100%;
-        height: 400px;
         margin: 0 auto;
+        display: inline-block;
+    }
+
+    #recommended>div {
+        width: 22%;
     }
 
     #video {
@@ -488,8 +492,9 @@ footer i {
     #gym-type {
         width: 100%;
         height: 400px;
-        /* padding: 20px; */
-        margin-left: 30px;
+        padding: 10px;
+        margin-left: 60px;
+        margin-bottom: 30px;
         display: inline-block;
     }
 
@@ -570,6 +575,13 @@ footer i {
     }
 } */
 
+@media screen and (max-width: 550px) {
+    #gyms {
+        width: 100%;
+        height: 900px;
+    }
+}
+
 @media screen and (max-width: 450px) {
 
     #logo,
@@ -581,6 +593,11 @@ footer i {
     #gyms {
         width: 100%;
         height: 1000px;
+    }
+
+    #gym-type {
+        margin-left: 30px;
+        margin-bottom: 30px;
     }
 
     #recommended {
@@ -611,6 +628,13 @@ footer i {
 
     #hero-image-text>h3 {
         font-size: 75%;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    #gyms {
+        width: 100%;
+        height: 1100px;
     }
 }
 
